tests/baselines/reference/ES3For-ofTypeCheck1.errors.txt
error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
ES3For-ofTypeCheck1.ts(1,15): error TS2494: Using a string in a 'for...of' statement is only supported in ECMAScript 5 and higher.


!!! error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
==== ES3For-ofTypeCheck1.ts (1 errors) ====
    for (var v of "") { }
                  ~~
!!! error TS2494: Using a string in a 'for...of' statement is only supported in ECMAScript 5 and higher.